--- a/themes/portio/exampleSite/config.toml
+++ b/themes/portio/exampleSite/config.toml
@@ -55,10 +55,10 @@ title = "Portio"
   blogPageURL = "blog"
   contactLink = "contact"
   copyright = "All right reserved copyright © Portio 2020"
-  footerLogo = "images/contact/widget-logo.png"
+  footerLogo = "images/contact/widget-logo.svg"
   formspreeURL = "YOUR FORMSPREE URL"
   googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
-  logo = "images/site-navigation/logo.png"
+  logo = "images/site-navigation/logo.svg"
 
   [params.address]
     address = "23 Khan Niketon, Grand Street, NYK."
