commit on test-BY

--- a/data/hero.yml
+++ b/data/hero.yml
@@ -1,6 +1,6 @@
 ---
 enable: true
-title: Penny Dreams Big
+title: Loyalty Scheme for Stocks and Commodity 
 subtitle: The first Spending and Invest loyalty app in Hong Kong
 description: tiips blends spending and investing,
 descriptionsub: making your life well-enriched by technology.
