--- a/config.toml
+++ b/config.toml
@@ -54,17 +54,19 @@ title = "tiips"
 [params]
   blogPageURL = "blog"
   contactLink = "contact"
-  copyright = "All right reserved copyright © Portio 2020"
+  copyright = "All right reserved copyright © tiips 2020"
   footerLogo = "images/contact/logo-white.svg"
   formspreeURL = "YOUR FORMSPREE URL"
   googleAnalytics = "YOUR GOOGLE ANALYTICS CODE"
   logo = "images/site-navigation/logo.svg"
 
   [params.address]
-    address = "23 Khan Niketon, Grand Street, NYK."
-    email = "hello@example.com"
+    address = "Lion Rock 72, 1/F, InnoCentre,"
+    street = "72 Tat Chee Avenue, Kowloon Tong,"
+    city = "Hong Kong"
+    email = "hello@tiips.com"
     openingHours = "Open from 10am to 6pm (close at 5pm Sundays)"
-    phone = "+(448) 833 5272 332"
+ 
   [params.map]
     APIkey = "YOUR GOOGLE MAP API"
     latitude = "23.7783741"
