--- a/data/en/resumeSection.yml
+++ b/data/en/resumeSection.yml
@@ -1,7 +1,7 @@
 ---
 enable: true
-topTitle: My Resume
-title: My Expertises
+topTitle: Testimonial
+title: User Review
 subtitle: Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
 subsubtitle: Magna aliquyam erat, sed diam voluptua. At vero eos accusam justo.
 
